@@ -1,3 +1,13 @@
+2003-01-03  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
+	* src/mod_mono.c: Added support functions for reading HTTP bodies,
+	this enables POST support:
+	mono_apache_should_client_block,
+	mono_apache_setup_client_block,
+	mono_apache_get_client_block
+	* src/ApacheWorkerRequest : Added ReadEntityBody
+	* src/Request : Added ShouldClientBlock, SetupClientBlock, GetClientBlock
+	for reading HTTP bodies and enabling POST support
+
 2002-12-31  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
 	* INSTALL: Added reference to machine.config
 	* configure.in: Update version to 0.2
